--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,19 +1,16 @@
-# pull official base image
-FROM node:13.12.0-alpine
-
-# set working directory
+FROM node:alpine
 WORKDIR /app
-
-# add `/app/node_modules/.bin` to $PATH
-ENV PATH /app/node_modules/.bin:$PATH
-
-# install app dependencies
+USER node
+# ENV PATH /app/node_modules/.bin:$PATH
 COPY package.json ./
 RUN npm install
-
-# add app
+RUN npm config set unsafe-perm=true
 COPY . ./
 EXPOSE 3001
 
 # start app
 CMD ["npm", "start"]
+
+
+# docker build -t instagram/backend . 
+# docker run -p 3001:3001 -v $(pwd):/app -v /app/node_modules instagram/backend
