--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,8 @@ services:
     volumes:
       - /app/node_modules
       - ./server:/app
+    ports:
+      - "3001:3001"
   # db:
   #   image: mysql
   #   restart: always
