--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,12 +1,20 @@
 FROM node:alpine
-USER node
-ARG HOME=/home/node
-ENV NPM_CONFIG_PREFIX=$HOME/.npm-global
-ENV PATH=$PATH:$HOME/.npm-global/bin
-WORKDIR /home/node
-COPY --chown=node:node ./package.json ./
+# USER node
+# ARG HOME=/home/node
+# ENV NPM_CONFIG_PREFIX=$HOME/.npm-global
+# ENV PATH=$PATH:$HOME/.npm-global/bin
+# WORKDIR /home/node
+# COPY --chown=node:node ./package.json ./
+# RUN npm install
+# RUN npm config set unsafe-perm true
+# COPY . ./
+# EXPOSE 3000
+
+WORKDIR /app
+# ENV PATH /app/node_modules/.bin:$PATH
+COPY package.json ./
 RUN npm install
-RUN npm config set unsafe-perm true
+RUN npm config set unsafe-perm=true
 COPY . ./
 EXPOSE 3000
 
@@ -14,4 +22,4 @@ EXPOSE 3000
 CMD ["npm", "start"]
 
 # docker build -t instagram/frontend . 
-# docker run -p 3000:3000 -v $(pwd):/home/node -v /home/node/node_modules instagram/frontend
+# docker run -p 3000:3000 -v $(pwd):/app -v app/node_modules instagram/frontend
