--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,17 +5,18 @@ services:
     container_name: frontend
     build: "./frontend"
     volumes:
-      - "/app/node_modules"
-      - "./frontend:/app"
+      - "/home/node/node_modules"
+      - "./frontend:/home/node"
     ports:
       - "3000:3000"
-    # environment:
-    #   - CHOKIDAR_USEPOLLING=true
+    environment:
+      - CHOKIDAR_USEPOLLING=true
   backend:
+    container_name: backend
     build: "./backend"
     volumes:
-      - /app/node_modules
-      - ./server:/app
+      - "/app/node_modules"
+      - "./backend:/app"
     ports:
       - "3001:3001"
   # db:
