--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,5 +1,7 @@
 FROM node:alpine
-WORKDIR /app
+USER node
+WORKDIR /home/node
+# WORKDIR /app
 # ENV PATH /app/node_modules/.bin:$PATH
 COPY package.json ./
 RUN npm install
