--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,9 @@
   "dependencies": {
     "express": "^4.17.1",
     "nodemon": "^2.0.13",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "mysql2": "^2.3.2",
+    "util": "^0.12.4",
+    "lodash": "^4.17.21"
   }
 }
