--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "cors": "^2.8.5",
     "mysql2": "^2.3.2",
     "util": "^0.12.4",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "dotenv": "^10.0.0"
   }
 }
