--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,8 @@
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1",
-    "axios": "^0.23.0"
+    "axios": "^0.23.0",
+    "dotenv": "^10.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
