--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,8 @@
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1",
     "axios": "^0.23.0",
-    "dotenv": "^10.0.0"
+    "dotenv": "^10.0.0",
+    "react-router-dom": "^5.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
