--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
     "mysql2": "^2.3.2",
     "util": "^0.12.4",
     "lodash": "^4.17.21",
-    "dotenv": "^10.0.0"
+    "dotenv": "^10.0.0",
+    "sequelize": "^6.9.0"
   }
 }
