--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,9 @@
     "web-vitals": "^1.0.1",
     "axios": "^0.23.0",
     "dotenv": "^10.0.0",
-    "react-router-dom": "^5.3.0"
+    "react-router-dom": "^5.3.0",
+    "bootstrap": "^5.1.3",
+    "react-bootstrap": "^2.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
